# B2B-Chess

./: CMakeLists.txt  README.md  build.sh
src/: lichess_bot.c  lichess_bot.h  main.cpp  uci_bot.c  uci_bot.h
